--- a/index.html
+++ b/index.html
@@ -29,15 +29,15 @@
             </div>
             <div class="button">
                 <div class="googlesearch">
-                    googlesearch
+                    Google Search
                 </div>
                 <div class="googlesearch1">
-                    give me one 
+                    Give Me One 
                 </div>
             </div>
             <div class="nihon">
-                <div>Google offered in:</div>
-                <div class="nihongo">日本語</div>
+                Google offered in:
+                <a href="">日本語</a>
             </div>
         </div>
 
