--- a/index.html
+++ b/index.html
@@ -65,4 +65,23 @@
 
 
     </body>
+    <footer>
+        <div class="ull1">
+            <div class="fujiwara"><a href="home">Advertising</a></div>
+            <div class="fujiwara"><a href="home">Business</a></div>
+            <div class="fujiwara"><a href="home">How Search works</a></div>
+
+            <div class="negin1">
+            <div class="fujiwara1"><a href="home">Privacy</a></div>
+            <div class="fujiwara1"><a href="home">Terms</a></div>
+            <div class="fujiwara1"><a href="home">Settings</a></div>
+
+            </div>
+        <!--
+            <div class="neg"><a href="home"></a></div>
+            <div class="neg"><a href="home"></a></div>
+        -->
+        </div>
+        
+    </footer>
 </html>
