--- a/index1.html
+++ b/index1.html
@@ -6,7 +6,22 @@
     <body>
         <header>
             <div class="ull">
-
+                <div class="logo"><img class="logo1" src="logo.png" alt="#"></div>
+                <div class="search">
+                    <div class="input"><input type="text" class="input1"></div>
+                    <div class="svg"></div>
+                </div>
+                <div class="user"></div>
+                <div class="buttons">
+                    <div class="button"></div>
+                    <div class="button"></div>
+                    <div class="button"></div>
+                    <div class="button"></div>
+                    <div class="button"></div>
+                    <div class="button"></div>
+                    <div class="button"></div>
+                    <div class="button"></div>
+                </div>
             </div>
         </header>
 
@@ -16,7 +31,29 @@
 
                 </div>
             </div>
-            <div class="center"></div>
+            <div class="center">
+                <div class="ad">
+                    <div class="address">
+                        <span style="font-size: 14px;font-weight: bold;font-family: Arial, Helvetica, sans-serif;">ad </span>
+                        <span >www.wix.com/build-website-for-free</span>
+                    </div>
+                    <a href="" class="title">Build a  website for Free - wix.com</a>
+                    <div class="contain"><b>Create</b> A Stunning Site for Free. Easy to Use, <b>Build</b> a <b>Website</b> Online. Mobile optimized. SEO wizard. Social media compatible. Market leaders. 100s of templates. Customizable templates. Free multilingual fonts. Advanced image editor. 100s of Apps. Easy-to-add blog.</div>
+                </div>
+                <div class="github"></div>
+                <div class="res"></div>
+                <div class="pas"></div>
+                <div class="res"></div>
+                <div class="video"></div>
+                <div class="res"></div>
+                <div class="res"></div>
+                <div class="res"></div>
+                <div class="res"></div>
+                <div class="res"></div>
+                <div class="res"></div>
+                <div class="relate"></div>
+                <div class="google"></div>
+            </div>
         </div>
     </body>
 </html>
