--- a/index1.html
+++ b/index1.html
@@ -4,7 +4,6 @@
         <link rel="stylesheet" href="css.css">
     </head>
     <body>
-        <header>
             <div class="ull">
                 <div class="logo"><img class="logo1" src="logo.png" alt="#"></div>
                 <div class="search">
@@ -12,6 +11,8 @@
                     <div class="svg"></div>
                 </div>
                 <div class="user"></div>
+            </div>
+            <div class="ull1">    
                 <div class="buttons">
                     <div class="button"></div>
                     <div class="button"></div>
@@ -23,7 +24,6 @@
                     <div class="button"></div>
                 </div>
             </div>
-        </header>
 
         <div class="body1">
             <div class="rhin">
@@ -36,6 +36,7 @@
                     <div class="address">
                         <span style="font-size: 14px;font-weight: bold;font-family: Arial, Helvetica, sans-serif;">ad </span>
                         <span >www.wix.com/build-website-for-free</span>
+                        <span><button class="meun"><div class="why">why this ad?</div></button></span>
                     </div>
                     <a href="" class="title">Build a  website for Free - wix.com</a>
                     <div class="contain"><b>Create</b> A Stunning Site for Free. Easy to Use, <b>Build</b> a <b>Website</b> Online. Mobile optimized. SEO wizard. Social media compatible. Market leaders. 100s of templates. Customizable templates. Free multilingual fonts. Advanced image editor. 100s of Apps. Easy-to-add blog.</div>
