--- a/index1.html
+++ b/index1.html
@@ -41,9 +41,41 @@
                     <a href="" class="title">Build a  website for Free - wix.com</a>
                     <div class="contain"><b>Create</b> A Stunning Site for Free. Easy to Use, <b>Build</b> a <b>Website</b> Online. Mobile optimized. SEO wizard. Social media compatible. Market leaders. 100s of templates. Customizable templates. Free multilingual fonts. Advanced image editor. 100s of Apps. Easy-to-add blog.</div>
                 </div>
-                <div class="github"></div>
-                <div class="res"></div>
-                <div class="pas"></div>
+                <div class="github">
+                    <div class="containgithub">TO CREATE A <b>WEBSITE</b> WITH WORDPRESS (OR JOOMLA &amp; DRUPAL), USE ONE CLICK INSTALLATION: Log in to your hosting account. Go to your control panel. Look for the “WordPress” or “<b>Website</b>” icon. Choose the domain where you want to install your <b>website</b>.</div>
+                    <div class="address">victor-lf.github.io › google-search-results</div>
+                    <a class="title">build this webpage - GitHub Pages</a>
+                </div>
+                <div class="res">
+                    <div class="address">christine-27.github.io › google-homepage</div>
+                    <a class="title">build this webpage - GitHub Pages</a>
+                    <div class="contain">TO CREATE A <b>WEBSITE</b> WITH WORDPRESS (OR JOOMLA &amp; DRUPAL), USE ONE CLICK INSTALLATION: Log in to your hosting account. Go to your control panel. Look for the “WordPress” or “<b>Website</b>” icon. Choose the domain where you want to install your <b>website</b>.</div>
+                </div>
+                <div class="pas">
+                    <div class="pas1">People also ask</div>
+                    <button class="drop">How can I create my own webpage?</button>
+                    <div class="dropcontain">
+                        <div class="dropcontain1">
+                            <b>Follow these 6 simple steps to create a website today.</b>
+                            <ol class="pakol">
+                                <li class="lili">Sign up for a free website builder. Choose what kind of website you want to create.</li>
+                                <li class="lili">Customize a template or get a website made for you. ...</li>
+                                <li class="lili">Drag and drop 100s of design features. ..</li>
+                                <li class="lili">Get ready for business. ...</li>
+                                <li class="lili">Publish your website and go live. ...</li>
+                                <li class="lili"> Drive traffic to your site.</li>
+
+                            </ol>
+                        </div>
+                        <div class="address">www.wix.com</div>
+                        <a class="title">Wix.com: Free Website Builder | Create a Free Website</a>
+                    </div>
+                    <button class="drop"></button>
+                    <button class="drop"></button>
+                    <button class="drop"></button>
+
+
+                </div>
                 <div class="res"></div>
                 <div class="video"></div>
                 <div class="res"></div>
@@ -57,4 +89,6 @@
             </div>
         </div>
     </body>
+
+    <script  src="js1.js"></script>
 </html>
