--- a/index1.html
+++ b/index1.html
@@ -3,6 +3,7 @@
     <head>
         <link rel="stylesheet" href="css.css">
     </head>
+    
     <body>
             <div class="ull">
                 <div class="logo"><img class="logo1" src="logo.png" alt="#"></div>
@@ -76,14 +77,50 @@
 
 
                 </div>
-                <div class="res"></div>
+                <div class="res">
+                    <div class="address">arstechnica.com › information-technology</div>
+                    <a class="title">With zero coding experience, artist building 180 webpages in ...</a>
+                    <div class="contain">One of Jennifer Dewalt's creations, this <em>webpage</em> lets visitors create paintings in ... <em>Build</em> a different <em>website</em> every day for 180 consecutive days.</div>
+                </div>
                 <div class="video"></div>
-                <div class="res"></div>
-                <div class="res"></div>
-                <div class="res"></div>
-                <div class="res"></div>
-                <div class="res"></div>
-                <div class="res"></div>
+                <div class="res">
+                    <div class="address">www.websitebuilderexpert.com › building-websites</div>
+                    <a class="title">How to Build a Website 2020 | The Complete Beginner's Guide</a>
+                    <div class="contain">How to <em>Build</em> a <em>Website</em>: the Step-by-Step Guide to Easy Setup. We'll look at how to make a <em>website</em> with both a <em>website</em> builder and WordPress,...</div>
+                </div>
+                <div class="res">
+                    <div class="address">buildthis.coms</div>
+                    <a class="title">uildThis: Chicago Web Design Illinois Website Design</a>
+                    <div class="contain">If you're looking to <em>build</em> a new <em>website</em>, begin a <em>website</em> redesign, <em>build</em> an eCommerce <em>website</em>, or anything in between, we'll work with you to create a custom...</div>
+                </div>
+                <div class="res">
+                    <div class="address">www.buildthis.io › make-a-website
+                        </div>
+                    <a class="title">
+                        How to Build A Website: A-to-Z Beginner Guide - BuildThis.io
+                    </a>
+                    <div class="contain">In this article, I will show you the essential steps in creating a <em>website</em>. Register a domain name; Signup for a web hosting; Design your...</div>
+                </div>
+                <div class="res">
+                    <div class="address">www.pcmag.com › ... › Web Hosting</div>
+                    <a class="title">
+                        How to Create a Website | PCMag
+                    </a>
+                    <div class="contain">If you need to quickly <em>build</em> a simple <em>website</em>, starting with a blogging service is a great way to go. The major player in the blog game is WordPress, a content...</div>
+                </div>
+                <div class="res">
+                    <div class="address">www.squarespace.com</div>
+                    <a class="title">
+                        Squarespace: Build a Website – Website Builder</a>
+                    <div class="contain">quarespace is the all-in-one solution for anyone looking to create a beautiful <em>website</em>. Domains, eCommerce, hosting, galleries, analytics, and 24/7 support all<wbr>...</div>
+                </div>
+                <div class="res">
+                    <div class="address">www.google.com › business › website-builder</div>
+                    <a class="title">
+                        Free Website Builder For Your Business - Google My Business
+                        </a>
+                    <div class="contain">Let Google <em>build</em> your first <em>website</em> for free. We'll help you create a beautiful <em>website</em> to impress and engage new customers – and establish your business online.</div>
+                </div>
                 <div class="relate"></div>
                 <div class="google"></div>
             </div>
